--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,5 @@
 /*
-Author       : Dreamguys
-Template Name: PreClinic - Medical and Hospital Admin Template
-Version      : 1.0
+Litco Health
 */
 
 /*============================
